# Tetra

./: .gitignore  Cargo.toml  main.tet  tetra.cpp
src/: cli_args.rs  driver.rs  error.rs  log.rs  main.rs
src/ast/: ast.rs  def.rs  fmt.rs  ident.rs  mod.rs  symbol.rs
src/codegen/: gen.rs  llvm_gen.rs  mod.rs  stacked_map.rs  writer.rs
src/parse/: error.rs  mod.rs  parser.rs  scope.rs  span.rs  token.rs  tokenizer.rs
src/validate/: entrypoint_finder.rs  expr_desugar.rs  expr_validate.rs  expr_validator.rs  mod.rs  visitor.rs
